Basic auth support

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -37,5 +37,6 @@ http {
         ~*android|ipad|playbook|silk/i 'tablet';
     }
 
+    include /etc/nginx/basic_auth.conf;
     include /etc/nginx/apps.d/*.conf;
 }
